--- a/templates/entries_list.mustache
+++ b/templates/entries_list.mustache
@@ -46,3 +46,16 @@
 {{#addlink}}
     <div><a role="button" href="{{addlink}}" class="btn btn-primary">{{#str}} newentry , tool_devcourse {{/str}}</a></div>
 {{/addlink}}
+
+{{#js}}
+    require(
+    [
+    'tool_devcourse/confirm'
+    ],
+    function(
+    c
+    ) {
+    c.init('[data-action=deleteentry]');
+    });
+
+{{/js}}
